# data-forager

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirements_tests.txt
data_forager/: unzip_files.py  utils.py
data_forager/datasets/: common.py  jsonl.py  tokens.py
data_forager/index_stores/: common.py  fs_based.py
data_forager/indexers/: jsonl_indexer.py  text_lines.py  tokenization_indexer.py
experiments/: jsonl_indexing.py
forager/: sample_index.py  unzip_files.py  utils.py
forager/datasets/: common.py  jsonl.py  tokens.py
forager/index_stores/: common.py  fs_based.py
forager/index_stores/fs_based/: default.py
forager/indexers/: common.py  jsonl_indexer.py  text_lines.py  tokenization_indexer.py
tests/: test_jsonl_indexing.py  test_tokenizing_indexing_jsonl.py
